--- a/index.html
+++ b/index.html
@@ -9,75 +9,100 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   
   <!-- Google Fonts -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" />
 
   <!-- Estilos propios -->
   <style>
-    body {
-      font-family: 'Roboto', sans-serif;
+    /* Reinicio de estilos básicos para mantener la coherencia en todos los navegadores */
+    * {
       margin: 0;
       padding: 0;
-      background-color: #f4f7f6;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #f4f4f9;
+      color: #333;
     }
 
     header {
-      background-color: #4CAF50;
+      background-color: #2c3e50;
       color: white;
       text-align: center;
       padding: 1rem 0;
-      font-size: 1.5rem;
-      font-weight: 500;
+      font-size: 1.8rem;
+      font-weight: 600;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     #map {
-      height: 80vh;
+      height: 70vh;
       width: 100%;
-      margin-top: 10px;
+      margin-top: 20px;
     }
 
     #upload-csv {
-      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
       padding: 20px;
+      margin-top: 20px;
+      background-color: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+      width: 80%;
+      margin: 20px auto;
     }
 
     #fileInput {
-      padding: 10px;
-      border: 2px dashed #4CAF50;
-      border-radius: 10px;
-      background-color: white;
+      padding: 12px;
+      border: 2px dashed #3498db;
+      border-radius: 8px;
+      background-color: #ecf0f1;
       font-size: 16px;
-      color: #333;
-      margin-bottom: 15px;
+      color: #2980b9;
+      width: 100%;
+      max-width: 400px;
+      transition: border-color 0.3s ease;
+      margin-bottom: 20px;
     }
 
     #fileInput:hover {
-      border-color: #45a049;
+      border-color: #2980b9;
     }
 
     button {
-      background-color: #4CAF50;
+      background-color: #3498db;
       color: white;
-      padding: 10px 20px;
+      padding: 12px 30px;
       border: none;
-      border-radius: 5px;
-      cursor: pointer;
+      border-radius: 25px;
       font-size: 16px;
-      transition: background-color 0.3s ease;
+      cursor: pointer;
+      font-weight: 500;
+      text-transform: uppercase;
+      box-shadow: 0 4px 12px rgba(52, 152, 219, 0.3);
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
     }
 
     button:hover {
-      background-color: #45a049;
+      background-color: #2980b9;
+      box-shadow: 0 6px 20px rgba(52, 152, 219, 0.5);
     }
 
     footer {
       text-align: center;
       padding: 15px;
-      background-color: #333;
+      background-color: #2c3e50;
       color: white;
       font-size: 0.9rem;
       position: relative;
       bottom: 0;
       width: 100%;
+      box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
+      margin-top: 20px;
     }
   </style>
 </head>
