--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       height: 100vh;
       width: calc(100% - 250px); /* Dejar espacio para la barra lateral */
       margin-left: 250px; /* Mover mapa para que no quede debajo de la barra lateral */
+      transition: width 0.3s ease, margin-left 0.3s ease; /* Transición suave cuando cambia el tamaño del mapa */
     }
 
     /* Estilo de la barra lateral */
@@ -64,7 +65,6 @@
     .file-upload-container {
       position: relative;
       width: 100%;
-      max-width: 350px; /* Reducir el tamaño del contenedor */
       text-align: center;
       margin: 0 auto;
     }
@@ -74,8 +74,8 @@
     }
 
     .file-upload-button {
-      background-color: #3498db;
-      color: white;
+      background-color: #ffffff; /* Cambiado a blanco */
+      color: #2c3e50;
       padding: 10px 18px; /* Botón ligeramente más pequeño */
       border: none;
       border-radius: 20px;
@@ -86,17 +86,20 @@
       box-shadow: 0 4px 10px rgba(52, 152, 219, 0.2);
       transition: background-color 0.3s ease, box-shadow 0.3s ease;
       width: 100%;
+      max-width: 350px; /* Mantener el tamaño centrado */
+      text-align: center;
     }
 
     .file-upload-button:hover {
-      background-color: #2980b9;
+      background-color: #3498db;
+      color: white;
       box-shadow: 0 6px 15px rgba(52, 152, 219, 0.4);
     }
 
     .file-name {
       margin-top: 15px;
       font-size: 13px;
-      color: #666;
+      color: #ffffff; /* Cambiar color del texto a blanco */
       font-weight: 400;
       font-style: italic;
       text-align: center;
@@ -108,7 +111,7 @@
     .file-name i {
       margin-right: 8px;
       font-size: 1.2rem;
-      color: #3498db;
+      color: #ffffff; /* Icono en blanco */
     }
 
     /* Botón para abrir/cerrar la barra lateral */
@@ -174,7 +177,7 @@
       // Cambiar la posición del mapa cuando se oculta o muestra la barra lateral
       if (sidebar.classList.contains('hidden')) {
         document.getElementById('map').style.marginLeft = "0";
-        document.getElementById('map').style.width = "100%";
+        document.getElementById('map').style.width = "100%"; // Asegurarse de que el mapa ocupe el 100% de la pantalla
       } else {
         document.getElementById('map').style.marginLeft = "250px";
         document.getElementById('map').style.width = "calc(100% - 250px)";
