--- a/index.html
+++ b/index.html
@@ -33,33 +33,33 @@
 
     #map {
       height: 100vh;
-      width: calc(100% - 200px); /* Ajuste al nuevo ancho de la barra lateral */
-      margin-left: 200px; /* Ajuste al nuevo ancho de la barra lateral */
+      width: 100%; /* El mapa ocupa toda la pantalla inicialmente */
+      margin-left: 0; /* Estado inicial sin margen */
       transition: width 0.3s ease, margin-left 0.3s ease;
     }
 
     /* Estilo de la barra lateral */
     .sidebar {
       height: 100vh;
-      width: 200px; /* Reducción del ancho de la barra lateral */
+      width: 150px; /* Reducción aún mayor del ancho de la barra lateral */
       position: fixed;
       top: 0;
       left: 0;
       background-color: #2c3e50;
       color: white;
-      padding: 15px; /* Reducimos el padding */
+      padding: 10px; /* Padding reducido */
       box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-      transform: translateX(0);
+      transform: translateX(-150px); /* Estado inicial oculto */
       transition: transform 0.3s ease;
     }
 
-    .sidebar.hidden {
-      transform: translateX(-200px);
+    .sidebar.visible {
+      transform: translateX(0); /* Mostrar la barra lateral cuando está visible */
     }
 
     .sidebar h2 {
-      font-size: 1.2rem; /* Reducción del tamaño del texto */
-      margin-bottom: 15px; /* Menor espacio entre los elementos */
+      font-size: 1rem; /* Reducción del tamaño del texto */
+      margin-bottom: 10px; /* Menor espacio entre los elementos */
       text-align: left; /* Alineación a la izquierda */
     }
 
@@ -76,10 +76,10 @@
     .file-upload-button {
       background-color: #3498db;
       color: white;
-      padding: 8px 16px; /* Botón ligeramente más pequeño */
+      padding: 6px 12px; /* Botón más pequeño */
       border: none;
-      border-radius: 18px; /* Reducción del tamaño del borde */
-      font-size: 12px; /* Reducir tamaño de la fuente */
+      border-radius: 16px; /* Reducción del tamaño del borde */
+      font-size: 10px; /* Reducir tamaño de la fuente */
       cursor: pointer;
       font-weight: 500;
       text-transform: uppercase;
@@ -94,8 +94,8 @@
     }
 
     .file-name {
-      margin-top: 10px; /* Espacio más reducido */
-      font-size: 12px; /* Reducir el tamaño del texto */
+      margin-top: 8px; /* Espacio más reducido */
+      font-size: 10px; /* Reducir el tamaño del texto */
       color: #666;
       font-weight: 400;
       font-style: italic;
@@ -105,8 +105,8 @@
     }
 
     .file-name i {
-      margin-right: 6px;
-      font-size: 1rem; /* Reducción del tamaño del icono */
+      margin-right: 5px;
+      font-size: 0.8rem; /* Reducción del tamaño del icono */
       color: #3498db;
     }
 
@@ -114,19 +114,19 @@
     #toggleSidebarBtn {
       position: absolute;
       top: 20px;
-      left: 200px; /* Ajustar al nuevo ancho de la barra lateral */
-      font-size: 18px; /* Reducción del tamaño de la fuente */
+      left: 20px; /* Estado inicial con la barra lateral oculta */
+      font-size: 16px; /* Reducción del tamaño de la fuente */
       background-color: #3498db;
       color: white;
-      padding: 8px 12px; /* Reducción del padding */
+      padding: 6px 10px; /* Reducción del padding */
       border: none;
       cursor: pointer;
       border-radius: 5px;
       transition: left 0.3s ease;
     }
 
-    .sidebar.hidden + #toggleSidebarBtn {
-      left: 20px; /* Mover el botón cuando la barra esté oculta */
+    .sidebar.visible + #toggleSidebarBtn {
+      left: 170px; /* Mover el botón cuando la barra esté visible */
     }
   </style>
 </head>
@@ -168,15 +168,17 @@
     function toggleSidebar() {
       var sidebar = document.getElementById('sidebar');
       var toggleBtn = document.getElementById('toggleSidebarBtn');
-      sidebar.classList.toggle('hidden');
+      sidebar.classList.toggle('visible');
 
       // Cambiar la posición del mapa cuando se oculta o muestra la barra lateral
-      if (sidebar.classList.contains('hidden')) {
+      if (sidebar.classList.contains('visible')) {
+        document.getElementById('map').style.marginLeft = "150px"; /* Ajuste al nuevo ancho de la barra lateral */
+        document.getElementById('map').style.width = "calc(100% - 150px)"; /* Ajuste al nuevo ancho de la barra lateral */
+        toggleBtn.style.left = "170px"; /* Mover el botón cuando la barra esté visible */
+      } else {
         document.getElementById('map').style.marginLeft = "0";
         document.getElementById('map').style.width = "100%"; // Asegurarse de que el mapa ocupe el 100% de la pantalla
-      } else {
-        document.getElementById('map').style.marginLeft = "200px"; /* Ajuste al nuevo ancho de la barra lateral */
-        document.getElementById('map').style.width = "calc(100% - 200px)"; /* Ajuste al nuevo ancho de la barra lateral */
+        toggleBtn.style.left = "20px"; // Restablecer la posición del botón cuando la barra esté oculta
       }
     }
 
