--- a/index.html
+++ b/index.html
@@ -48,16 +48,17 @@
     /* Estilo de la barra lateral */
     .sidebar {
       height: 100vh;
-      width: 150px; /* Reducción aún mayor del ancho de la barra lateral */
+      width: 150px; /* Ancho de la barra lateral */
       position: fixed;
-      top: 80px; /* Ajustamos para que la barra lateral comience debajo del header fijo */
+      top: 80px; /* Ajustado para estar debajo del header */
       left: 0;
       background-color: #2c3e50;
       color: white;
-      padding: 10px; /* Padding reducido */
+      padding: 10px;
       box-shadow: 2px 0 5px rgba(0,0,0,0.1);
       transform: translateX(-150px); /* Estado inicial oculto */
       transition: transform 0.3s ease;
+      z-index: 999; /* Aseguramos que esté por encima del contenido del mapa */
     }
 
     .sidebar.visible {
@@ -65,15 +66,15 @@
     }
 
     .sidebar h2 {
-      font-size: 1rem; /* Reducción del tamaño del texto */
-      margin-bottom: 10px; /* Menor espacio entre los elementos */
-      text-align: left; /* Alineación a la izquierda */
+      font-size: 1rem; /* Tamaño del texto */
+      margin-bottom: 10px;
+      text-align: left;
     }
 
     .file-upload-container {
       position: relative;
       width: 100%;
-      text-align: left; /* Alinear a la izquierda */
+      text-align: left;
     }
 
     .file-upload-input {
@@ -83,10 +84,10 @@
     .file-upload-button {
       background-color: #3498db;
       color: white;
-      padding: 6px 12px; /* Botón más pequeño */
+      padding: 6px 12px;
       border: none;
-      border-radius: 16px; /* Reducción del tamaño del borde */
-      font-size: 10px; /* Reducir tamaño de la fuente */
+      border-radius: 16px;
+      font-size: 10px;
       cursor: pointer;
       font-weight: 500;
       text-transform: uppercase;
@@ -101,39 +102,41 @@
     }
 
     .file-name {
-      margin-top: 8px; /* Espacio más reducido */
-      font-size: 10px; /* Reducir el tamaño del texto */
+      margin-top: 8px;
+      font-size: 10px;
       color: #666;
       font-weight: 400;
       font-style: italic;
       display: flex;
       align-items: center;
-      justify-content: flex-start; /* Alineación a la izquierda */
+      justify-content: flex-start;
     }
 
     .file-name i {
       margin-right: 5px;
-      font-size: 0.8rem; /* Reducción del tamaño del icono */
+      font-size: 0.8rem;
       color: #3498db;
     }
 
     /* Botón para abrir/cerrar la barra lateral */
     #toggleSidebarBtn {
-      position: absolute;
+      position: fixed; /* Fijamos la posición para que esté siempre visible */
       top: 100px; /* Ajustado para estar debajo del header */
       left: 20px; /* Estado inicial con la barra lateral oculta */
-      font-size: 16px; /* Reducción del tamaño de la fuente */
+      font-size: 16px;
       background-color: #3498db;
       color: white;
-      padding: 6px 10px; /* Reducción del padding */
+      padding: 6px 10px;
       border: none;
       cursor: pointer;
       border-radius: 5px;
+      z-index: 1001; /* Asegurar que esté por encima del contenido */
       transition: left 0.3s ease;
     }
 
+    /* Asegurarse de que el botón se mueva cuando la barra lateral esté visible */
     .sidebar.visible + #toggleSidebarBtn {
-      left: 170px; /* Mover el botón cuando la barra esté visible */
+      left: 170px;
     }
   </style>
 </head>
