--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     header {
       background-color: #2c3e50;
       color: white;
-      text-align: center;
-      padding: 1rem 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 1rem; /* Ajuste del padding para acomodar el botón */
       font-size: 1.8rem;
       font-weight: 600;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -34,6 +36,21 @@
       left: 0;
       width: 100%;
       z-index: 1000; /* Asegurar que el header esté por encima de otros elementos */
+    }
+
+    #toggleSidebarBtn {
+      font-size: 18px; /* Tamaño de la fuente del botón */
+      background-color: #3498db;
+      color: white;
+      padding: 8px 12px;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+
+    #toggleSidebarBtn:hover {
+      background-color: #2980b9;
     }
 
     /* Ajustar el margen superior del mapa para que no se superponga con el header fijo */
@@ -118,30 +135,9 @@
       color: #3498db;
     }
 
-    /* Botón para abrir/cerrar la barra lateral */
-    #toggleSidebarBtn {
-      position: fixed; /* Fijamos la posición para que esté siempre visible */
-      top: 100px; /* Ajustado para estar debajo del header */
-      left: 20px; /* Estado inicial con la barra lateral oculta */
-      font-size: 18px; /* Aumentamos ligeramente el tamaño de la fuente */
-      background-color: #3498db;
-      color: white;
-      padding: 8px 14px; /* Aumentamos el padding */
-      border: none;
-      cursor: pointer;
-      border-radius: 5px;
-      z-index: 1001; /* Asegurar que esté por encima del contenido */
-      transition: left 0.3s ease;
-    }
-
-    /* Asegurarse de que el botón se mueva cuando la barra lateral esté visible */
-    .sidebar.visible + #toggleSidebarBtn {
-      left: 200px; /* Aumentado para alinearse con la nueva barra lateral */
-    }
-
     /* Ajustar la posición de los controles del mapa para evitar superposición con la barra lateral */
     .leaflet-top.leaflet-left {
-      left: 210px; /* Ajustamos el margen izquierdo para que los controles no se superpongan con la barra lateral */
+      left: 200px; /* Ajustamos el margen izquierdo para que los controles no se superpongan con la barra lateral */
     }
 
   </style>
@@ -150,7 +146,8 @@
 
   <!-- Encabezado -->
   <header>
-    Visualización de Polígonos por Zona de Explotación
+    <span>Visualización de Polígonos por Zona de Explotación</span>
+    <button id="toggleSidebarBtn" onclick="toggleSidebar()">☰</button>
   </header>
 
   <!-- Barra lateral -->
@@ -162,9 +159,6 @@
       <p class="file-name" id="fileName"><i class="fas fa-file-csv"></i>No se ha seleccionado ningún archivo</p>
     </div>
   </div>
-
-  <!-- Botón para abrir/cerrar la barra lateral -->
-  <button id="toggleSidebarBtn" onclick="toggleSidebar()">☰</button>
 
   <!-- Contenedor del mapa -->
   <div id="map"></div>
@@ -183,18 +177,16 @@
     // Función para alternar la visibilidad de la barra lateral
     function toggleSidebar() {
       var sidebar = document.getElementById('sidebar');
-      var toggleBtn = document.getElementById('toggleSidebarBtn');
+      var map = document.getElementById('map');
       sidebar.classList.toggle('visible');
 
       // Cambiar la posición del mapa cuando se oculta o muestra la barra lateral
       if (sidebar.classList.contains('visible')) {
-        document.getElementById('map').style.marginLeft = "180px"; /* Ajuste al nuevo ancho de la barra lateral */
-        document.getElementById('map').style.width = "calc(100% - 180px)"; /* Ajuste al nuevo ancho de la barra lateral */
-        toggleBtn.style.left = "200px"; /* Mover el botón cuando la barra esté visible */
+        map.style.marginLeft = "180px"; /* Ajuste al nuevo ancho de la barra lateral */
+        map.style.width = "calc(100% - 180px)"; /* Ajuste al nuevo ancho de la barra lateral */
       } else {
-        document.getElementById('map').style.marginLeft = "0";
-        document.getElementById('map').style.width = "100%"; // Asegurarse de que el mapa ocupe el 100% de la pantalla
-        toggleBtn.style.left = "20px"; // Restablecer la posición del botón cuando la barra esté oculta
+        map.style.marginLeft = "0";
+        map.style.width = "100%"; // Asegurarse de que el mapa ocupe el 100% de la pantalla
       }
     }
 
