--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
       background-color: #2c3e50;
       color: white;
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      padding: 1rem 1rem; /* Ajuste del padding para acomodar el botón */
+      padding: 1rem 1rem;
       font-size: 1.8rem;
       font-weight: 600;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -39,6 +38,7 @@
     }
 
     #toggleSidebarBtn {
+      margin-right: 1rem; /* Agregar espacio entre el botón y el título */
       font-size: 18px; /* Tamaño de la fuente del botón */
       background-color: #3498db;
       color: white;
@@ -147,8 +147,8 @@
 
   <!-- Encabezado -->
   <header>
-    <span>Visualización de Polígonos por Zona de Explotación</span>
     <button id="toggleSidebarBtn" onclick="toggleSidebar()">☰</button>
+    <span>Visualización de Polígonos por Zona de Explotación</span>
   </header>
 
   <!-- Barra lateral -->
